# KnowledgeGraph

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: auth.py  cache.py  dependencies.py  sanitization.py
api/routes/: ingest.py  query.py
extraction/: __init__.py  extractor.py  schemas.py
graph/: __init__.py  graph_builder.py  mongo_store.py
ingestion/: __init__.py  csv_loader.py  pdf_parser.py
monitoring/: __init__.py  langfuse_setup.py
orchestration/: __init__.py  pipeline.py
rag/: __init__.py  retriever.py
sample_data/: sample.csv  test_knowledge.csv
vector_store/: __init__.py  faiss_store.py
