[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-graph"
version = "0.1.0"
description = "A knowledge graph extraction and storage system using LLMs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "KnowledgeGraph Team"}
]
license = {text = "MIT"}

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pymupdf",
    "pandas",
    "pydantic",
    "openai==1.51.2",
    "langchain",
    "langgraph",
    "langchain-openai",
    "langchain-community",
    "networkx",
    "faiss-cpu",
    "numpy",
    "pymongo",
    "motor",
    "redis",
    "python-dotenv",
    "langfuse==2.60.0",
    "httpx==0.27.2",
    "tiktoken",
    "slowapi",
    "tenacity",
    "python-multipart>=0.0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.20",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
]

test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[tool.hatch.build.targets.wheel]
packages = ["extraction", "ingestion", "graph", "vector_store", "rag", "api", "monitoring", "orchestration", "tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.20",
    "pytest-mock>=3.10",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [".venv"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["extraction", "ingestion", "graph", "vector_store", "rag", "api"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
